<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<modelVersion>4.0.0</modelVersion>
	<groupId>graesberg.tdt4100</groupId>
	<artifactId>assignments</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<dependencies>
		<!-- JavaFX FXML -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>23.0.1</version>
		</dependency>

		<!-- JUnit 5 -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.11.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>${argLine} --enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>${argLine} --enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<configuration>
					<excludes>
						<exclude>**/debugging/*.*</exclude>
					</excludes>
				</configuration>
				<executions>
						<execution>
								<goals>
										<goal>prepare-agent</goal>
								</goals>
						</execution>
						<execution>
								<id>generate-code-coverage-report</id>
								<phase>test</phase>
								<goals>
										<goal>report</goal>
								</goals>
						</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>